# late-brake

./: .gitignore  README.md  SKILL.md  convert_tracks.py  pyproject.toml
docs/: PRD-v1.md  TECH-SPEC.md  UserStories.csv  compare-data-requirements.md  compare-json-schema.md  data-format.md  kml2json.md  track-format.md  user-story-deps.dot  vbo-format.md
sample-data/: private_2.nmea  tianma_1.nmea
sample-data/running/: PGEAR-Tianma-M4.vbo  private_1.nmea  tianma_0125_1.nmea  tianma_0125_1.vbo
sample-data/tracks/: Shanghai - Tianma.kml  Shanghai-Tianma.kml  tianma.json
scripts/: kml2json.py  package_skill.sh  publish_skill.sh
src/late_brake/: cli.py  models.py  track.py  track_manager.py
src/late_brake/core/: comparator.py  splitter.py
src/late_brake/data/tracks/: my_private_track_1.json  tianma.json
src/late_brake/io/: __init__.py  cache.py  track_store.py
src/late_brake/io/parsers/: __init__.py  nmea.py
src/late_brake/models/: __init__.py  lap.py  point.py  track.py
tests/: test_models.py  test_track.py  test_track_manager.py
tests/cli/: test_compare_incomplete.py
tests/core/: test_comparator.py  test_matcher.py  test_splitter.py
tests/io/: test_cache.py  test_nmea.py  test_track_store.py  test_vbo.py
tests/models/: test_lap.py  test_point.py  test_track.py
tools/: app.py  data.txt  pgear-tianma-m4.txt  requirements.txt  saic-data.txt  salzburgring-data.txt
tracks/: my_private_track_1.json  saic.json  tianma.json
