[project]
name = "late-brake"
version = "0.1.0"
authors = [
  { name="Kai Han", email="kai.han@example.com" }
]
description = "A CLI tool for lap time analysis and comparison in motorsport"
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.10"
dependencies = [
  "click>=8.0",
  "pydantic>=2.0",
  "numpy>=1.24",
  "geographiclib>=2.0",
  "jsonschema>=4.0",
  "wcwidth>=0.2.0",
]

[project.scripts]
late-brake = "late_brake.cli:main"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  "src",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
